Started on positional arguments

--- a/ConsoleApplication3/ConsoleApplication3.csproj
+++ b/ConsoleApplication3/ConsoleApplication3.csproj
@@ -47,19 +47,20 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Extensions\OptionExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Argument.cs" />
     <Compile Include="Parsing\ArgumentParserException.cs" />
     <Compile Include="Parsing\ArgumentParserResult.cs" />
-    <Compile Include="Model\ApplicationBuilder.cs" />
+    <Compile Include="ApplicationBuilder.cs" />
     <Compile Include="Parsing\ArgumentToken.cs" />
-    <Compile Include="Model\CommandBuilder.cs" />
-    <Compile Include="Model\Command.cs" />
+    <Compile Include="CommandBuilder.cs" />
+    <Compile Include="Command.cs" />
     <Compile Include="ApplicationConfiguration.cs" />
     <Compile Include="Extensions\ExpressionExtensions.cs" />
-    <Compile Include="Model\ICommandBuilder.cs" />
-    <Compile Include="Model\IApplicationBuilder.cs" />
-    <Compile Include="Model\IOptionRegistry.cs" />
+    <Compile Include="ICommandBuilder.cs" />
+    <Compile Include="IApplicationBuilder.cs" />
+    <Compile Include="IOptionRegistry.cs" />
     <Compile Include="Parsing\ArgumentLexer.cs" />
-    <Compile Include="Model\Option.cs" />
+    <Compile Include="Option.cs" />
     <Compile Include="Parsing\ArgumentParser.cs" />
     <Compile Include="Extensions\ReflectionExtensions.cs" />
     <Compile Include="Program.cs" />
