--- a/ConsoleApplication3.Tests/ConsoleApplication3.Tests.csproj
+++ b/ConsoleApplication3.Tests/ConsoleApplication3.Tests.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationBuilderTests.cs" />
     <Compile Include="ArgumentLexerTests.cs" />
     <Compile Include="ArgumentParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
