Added support for response files

--- a/ConsoleApplication3.Tests/ConsoleApplication3.Tests.csproj
+++ b/ConsoleApplication3.Tests/ConsoleApplication3.Tests.csproj
@@ -63,6 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ResponseFiles\test2.rsp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="ResponseFiles\test.rsp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleApplication3\ConsoleApplication3.csproj">
